Implementation of fortify repository scan to NightlyPipeline