@@ -164,6 +164,7 @@ dependencies {
 
     testCompile group: 'com.github.hmcts', name: 'ccd-test-definitions', version: '7.0.0'
     testCompile group: 'com.github.hmcts', name: 'befta-fw', version: '8.2.0'
+    testCompile "com.github.hmcts:fortify-client:0.0.2.ccd-1253.3:all"
 
 }
 // end::dependencies[]
@@ -326,6 +327,12 @@ sourceSets {
             srcDir('src/aat/resources')
         }
     }
+}
+
+task fortifyScan(type: JavaExec)  {
+    main = "uk.gov.hmcts.fortifyscanner.FortifyScanMainApp"
+    classpath += sourceSets.test.runtimeClasspath
+    jvmArgs = ['--add-opens=java.base/java.lang.reflect=ALL-UNNAMED']
 }
 
 task highLevelDataSetup(type: JavaExec) {
